kubernetes/k8s-services/dns-svc-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: svc-test-dns
  namespace: service-namespace
spec:
  containers:
  - name: busybox-svc
    image: radial/busyboxplus:curl
    command:
    - sleep
    - '3600'
