kubernetes/k8s-services/podmanifest.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-webproxy
  labels:
    app: nginx-pod
spec:
  containers:
  - name: nginx
    image: nginx:1.16.0
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
    - name: nginx-port
      containerPort: 80
