kubernetes/k8s-services/svc-pod-test.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-svc-test
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    command:
    - sleep
    - '3600'
