kubernetes/k8s-services/ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-rules
spec:
  rules: # the rules for ingress
  - host: nginx-official.example.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend: # this nginx-official.example.com/ will route to nginx-official-service 
          service:
            name: nginx-official-service
            port:
              number: 80
  - host: magical-nginx.example.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: magical-nginx
            port:
              number: 80
